2006-03-28  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_details.cc:
	* glom/mode_data/box_data_list.cc: Call set_field_value_in_database() with the optional 
	use_current_calculations value instead of mistakenly casting the window pointer to bool.

2006-03-28  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom.glade: window_layout_report: 
	* glom/reports/dialog_layout_report.cc:
	* glom/reports/dialog_layout_report.h: Add a show_table_title checkbutton, because the 
	table title is sometimes superfluous.
	* glom/document/document_glom.cc: load_after(), save_before(): load and save 
	the new report property.
	* glom/base_db.cc: build_report(): Put show_table_title in the xml.
	* xslt/print_report_to_html.xsl: Interepret show_table_title in the xml.
	* glom/data_structure/report.cc:
	* glom/data_structure/report.h: Added get/set_show_table_title().

2006-03-27  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/db_adddel/db_adddel.cc: Use TreeView::set_fixed_height_mode() and 
	TreeViewColumn::set_fixed_width(), so that the TreeView does not request values that are 
	not visible in the scrolled window. If libgda does things properly then this should mean 
	that we do not get data from the database that we never see.

2006-03-27  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_list_related.cc:
	* glom/mode_data/box_data_list_related.h: Added get_suitable_record_to_view_details() 
	and get_has_suitable_record_to_view_details() so that the row button can go to a 
	doubly-related record if the related table is hidden, based on the first related field 
	in the portal.
	* glom/utility_widgets/flowtablewithfields.cc: on_portal_user_requested_details(): 
	If the related table is hidden, use get_has_suitable_record_to_view_details() instead.

2006-03-27  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/flowtablewithfields.cc: create_related(): Connect to signals 