@@ -1,5 +1,13 @@
 2006-03-28  Murray Cumming  <murrayc@murrayc.com>
 
+	* glom/dialog_connection.cc: load_from_document(): Use localhost if the host name is 
+	empty.
+	* glom/frame_glom.cc: connection_request_password_and_choose_new_database_name(): 
+	Store the successfully-used entered server host name in the document, so it is the 
+	default when the document is reopened.
+
+2006-03-28  Murray Cumming  <murrayc@murrayc.com>
+
 	* glom/mode_data/box_data_details.cc:
 	* glom/mode_data/box_data_list.cc: Call set_field_value_in_database() with the optional 
 	use_current_calculations value instead of mistakenly casting the window pointer to bool.
